// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server GET /swaps/:id retrieves a swap in FAILED status (egress ignored) 1`] = `
{
  "depositAmount": "1",
  "depositTransactionHash": "0x245466cbf3907aee42a64c5589ccd804ec3dcd3c54c28eb2b418c804cf009915",
  "depositTransactionRef": "0x245466cbf3907aee42a64c5589ccd804ec3dcd3c54c28eb2b418c804cf009915",
  "destAddress": "0xa56a6be23b6cf39d9448ff6e897c29c41c8fbdff",
  "destAsset": "FLIP",
  "destChain": "Ethereum",
  "egressIgnoredAt": 14292858000,
  "egressIgnoredBlockIndex": "2382143-817",
  "error": {
    "message": "The amount is below the minimum egress amount.",
    "name": "ethereumIngressEgress.BelowEgressDustLimit",
  },
  "estimatedDefaultDurationSeconds": 54,
  "failure": "EGRESS_IGNORED",
  "feesPaid": [
    {
      "amount": "0",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "0",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "LIQUIDITY",
    },
    {
      "amount": "0",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "LIQUIDITY",
    },
  ],
  "ignoredEgressAmount": "0",
  "intermediateAmount": "0",
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "FAILED",
  "swapExecutedAt": 14292858000,
  "swapExecutedBlockIndex": "2382143-816",
  "swapId": "2275",
  "swapScheduledAt": 14292846000,
  "swapScheduledBlockIndex": "2382141-681",
  "type": "SWAP",
}
`;

exports[`server GET /swaps/:id retrieves a swap in FAILED status (refund egress ignored) 1`] = `
{
  "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
  "depositAmount": "5000000000000000000",
  "depositChannelBrokerCommissionBps": 0,
  "depositChannelCreatedAt": 516000,
  "depositChannelExpiryBlock": "265",
  "depositChannelMaxBoostFeeBps": 0,
  "depositChannelOpenedThroughBackend": false,
  "depositReceivedAt": 552000,
  "depositReceivedBlockIndex": "92-400",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "egressAmount": "999844999999160000",
  "egressIgnoredAt": 624000,
  "egressIgnoredBlockIndex": "104-1",
  "egressScheduledAt": 564000,
  "egressScheduledBlockIndex": "94-594",
  "egressType": "REFUND",
  "error": {
    "message": "The amount is below the minimum egress amount.",
    "name": "ethereumIngressEgress.BelowEgressDustLimit",
  },
  "estimatedDefaultDurationSeconds": 48,
  "estimatedDepositChannelExpiryTime": 1699527060000,
  "failure": "REFUND_EGRESS_IGNORED",
  "feesPaid": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "105000000490000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "EGRESS",
    },
  ],
  "ignoredEgressAmount": "999844999999160000",
  "isDepositChannelExpired": false,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "FAILED",
  "swapId": "368",
  "swapScheduledAt": 552000,
  "swapScheduledBlockIndex": "92-399",
  "type": "SWAP",
}
`;

exports[`server GET /swaps/:id retrieves boost details when swap was boosted 1`] = `
{
  "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
  "depositAmount": "4999949999999650000",
  "depositBoostedAt": 552000,
  "depositBoostedBlockIndex": "92-400",
  "depositChannelBrokerCommissionBps": 0,
  "depositChannelCreatedAt": 516000,
  "depositChannelExpiryBlock": "265",
  "depositChannelMaxBoostFeeBps": 30,
  "depositChannelOpenedThroughBackend": false,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "effectiveBoostFeeBps": 5,
  "estimatedDefaultDurationSeconds": 48,
  "estimatedDepositChannelExpiryTime": 1699527060000,
  "feesPaid": [
    {
      "amount": "2500000000000000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "BOOST",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "isDepositChannelExpired": false,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "AWAITING_DEPOSIT",
  "swapId": "368",
  "swapScheduledAt": 552000,
  "swapScheduledBlockIndex": "92-399",
  "type": "SWAP",
}
`;
